tests/NormalTests/paczka1/small_fuzzy/28441544.err
Error in line 7: qCTrR S595 56,9
Error in line 11: AhmKJNEztG A800 45,4
